[package]
name = "doge-wallet"
version = "0.1.0"
edition = "2018"
authors = ["Tobin Harding <me@tobin.cc>"]
license = "MIT"
homepage = "https://github.com/tcharding/doge-wallet-rs/"
repository = "https://github.com/tcharding/doge-wallet-rs/"
description = "Command line Dogecoin wallet"
keywords = [ "crypto", "dogecoin" ]
readme = "README.md"

[dependencies]
anyhow = "1.0"
bitcoincore-rpc = { version = "0.13", git = "http://github.com/tcharding/rust-bitcoincore-rpc", branch = "dogecoin"  }
bitcoin = { version = "0.26", git = "http://github.com/tcharding/rust-bitcoin", branch = "dogecoin" }
# bdk = { version = "0.9.1-dev", features = [ "electrum", "key-value-db" ], default-features = false, git = "http://github.com/tcharding/bdk", branch = "dogecoin" }
bdk = { version = "0.9.1-dev", features = [ "electrum", "key-value-db" ], default-features = false, path = "../bdk" }
electrum-client = { version = "0.7", git = "http://github.com/tcharding/rust-electrum-client", branch = "dogecoin" }
env_logger = "0.8"
log = { version = "0.4", features = ["std"] }
secp256k1 = "0.20"
serde_json = "1.0"
sled = "0.34"
structopt = "0.3"
