[package]
name = "btc-wallet"
version = "0.1.0"
edition = "2018"
authors = ["Tobin Harding <me@tobin.cc>"]
license = "MIT"
homepage = "https://github.com/tcharding/btc-wallet-rs/"
repository = "https://github.com/tcharding/btc-wallet-rs/"
description = "Simple command line Bitcoin wallet"
keywords = [ "bitcoin", "wallet" ]
readme = "README.md"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "^0.27", features = ["use-serde", "base64"] }
bitcoincore-rpc = "0.13"
electrum-client = "0.7"
env_logger = "0.8"
log = { version = "0.4", features = ["std"] }
secp256k1 = "0.20"
serde_json = "1.0"
sled = "0.34"
structopt = "0.3"

[dependencies.bdk]
git = "https://github.com/tcharding/bdk"
branch = "serialized-memory-db"
default-features = false
features = [ "electrum", "key-value-db" ]
