[package]
name = "btc-wallet"
version = "0.1.0"
edition = "2018"
authors = ["Tobin Harding <me@tobin.cc>"]
license = "MIT"
homepage = "https://github.com/tcharding/btc-wallet-rs/"
repository = "https://github.com/tcharding/btc-wallet-rs/"
description = "Simple command line Bitcoin wallet"
keywords = [ "bitcoin", "wallet" ]
readme = "README.md"

[dependencies]
anyhow = "1.0"
bdk = { version = "0.13", features = [ "electrum", "key-value-db", "use-esplora-reqwest", "rpc" ], default-features = false }
bitcoin = "0.27.1"
bitcoincore-rpc = "0.14"
electrum-client = "0.8"
env_logger = "0.8"
log = { version = "0.4", features = ["std"] }
serde_json = "1.0"
sled = "0.34"
structopt = "0.3"
